WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225993
[Modern Media Controls] should not use `codePointCompare` as it doesn't take into account language specific sorting rules
https://bugs.webkit.org/show_bug.cgi?id=225993
Summary
[Modern Media Controls] should not use `codePointCompare` as it doesn't take ...
Devin Rousso
Reported
2021-05-19 16:32:56 PDT
.
Attachments
Patch
(5.56 KB, patch)
2021-05-19 17:12 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-05-19 17:12:03 PDT
Created
attachment 429116
[details]
Patch
EWS
Comment 2
2021-05-20 10:28:48 PDT
Committed
r277793
(
237954@main
): <
https://commits.webkit.org/237954@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429116
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-05-20 10:29:18 PDT
<
rdar://problem/78265256
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug