[Modern Media Controls] should not use `codePointCompare` as it doesn't take into account language specific sorting rules https://bugs.webkit.org/show_bug.cgi?id=225993

Reviewed by Eric Carlson.

* page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::sortedTrackListForMenu):
* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::textTrackCompare):
(WebCore::CaptionUserPreferencesMediaAF::sortedTrackListForMenu):


Canonical link: https://commits.webkit.org/237954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277793 268f45cc-cd09-0410-ab3c-d52691b4dbfc